[tool.poetry]
name = "tutorial"
version = "0.1.0"
description = ""
authors = ["Niels Hendrikx <niels.y.hendrikx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.0"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
